able to parse JSON data and display in popup properly

--- a/grabcoffee.html
+++ b/grabcoffee.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-    <div id="app">
-        Searching...
-    </div>
+    <div id="app"><img src="icons/32.png"/>Loading...</div>
     <script src="grabcoffee.js"></script>
 </body>
 
