able to display full header location

--- a/grabcoffee.html
+++ b/grabcoffee.html
@@ -4,11 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="grabcoffee.css">
-    
 </head>
 
 <body>
-    <div id="app"><img src="icons/32.png"/>Loading...</div>
+    <div class="container">
+        <div id="app">
+            <img src="icons/32.png"/> Loading...
+            <div class="panel panel-default">
+                <div class="panel-body">ddd</div>
+            </div>
+        </div>
+    </div>
+
+    
     <script src="grabcoffee.js"></script>
 </body>
 
